--- a/TheOneDoctor/Info.plist
+++ b/TheOneDoctor/Info.plist
@@ -18,8 +18,42 @@
 	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FirebaseMessagingAutoInitEnabled</key>
+	<false/>
+	<key>FirebaseScreenReportingEnabled</key>
+	<false/>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>whatsapp</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>localhost</key>
+			<string></string>
+		</dict>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow Camera to capture photo</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>This application requires face ID to unlock</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Allow Microphone to take video</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allow to Save Photos in Library.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Pick Photo for your Profile Picture.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
